syntax = "proto3";

package trisa.synctxn.v1alpha1;

option go_package = "github.com/trisacrypto/trisa/proto/trisa/synctxn/v1alpha1";

message ReqMsg {
    string date = 1;
    string amount = 2;
    string currency = 3;
    string count = 4;
    string id = 5;
    string hash = 6;
    string key = 7;
}

message rspMsg {
    string resp_code = 1;
    string resp_desc = 2;
}